[package]
name = "zen"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]

[dependencies]
cortex-m = "0.4.3"
cortex-m-rtfm = "0.3.1"
m = "0.1.1"

[dependencies.byteorder]
default-features = false
version = "1.2.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.cobs]
default-features = false
version = "0.1.3"

[dependencies.crc16]
default-features = false
version = "0.3.4"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.12"

[dependencies.either]
default-features = false
version = "1.4.0"

[dependencies.motor-driver]
git = "https://github.com/japaric/motor-driver"
rev = "b1837d45a1acc3ccb024f11a7f0d8b9a02771462"

[dependencies.mpu9250]
git = "https://github.com/japaric/mpu9250"
rev = "4cd19cc74d71de6f3edf532d53537ab67c70d514"

[dependencies.stm32f103xx-hal]
features = ["rt"]
git = "https://github.com/japaric/stm32f103xx-hal"
rev = "9fa23af973919cb8e2ebe35ccceec79663a37336"

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
debug = true
lto = true
